# kubeflow_deploy

./: README.md  pyproject.toml
docker/etl/: dockerfile
docker/training/: dockerfile
script/: doker_build_push.txt
src/kubereg/api/: main.py
src/kubereg/etl/: etl.py
src/kubereg/pipeline/: pipeline.py
src/kubereg/pipeline/components/: etl_component.py  train_component.py
src/kubereg/training/: train.py
